build.log.txt
Generating code snapshot in ./llms.txt ...
╭───────────────────────────────────── CodeToPrompt ──────────────────────────────────────╮
│ Configuration for this run:                                                             │
│ Root Directory: /Users/adam/Developer/vcs/github.twardoch/pub/svgn                      │
│ Include Patterns: ['*']                                                                 │
│ Exclude Patterns: ['*.svg', '.specstory', '*.md', '*.txt', 'ref', 'testdata', '*.lock'] │
│ Respect .gitignore: True                                                                │
│ Show Line Numbers: False                                                                │
│ Count Tokens: True                                                                      │
│ Compress Code: True                                                                     │
│ Max Tokens: Unlimited                                                                   │
│ Tree Depth: 5                                                                           │
│ Output Format: default                                                                  │
│ Interactive Mode: False                                                                 │
╰─────────────────────────────────────────────────────────────────────────────────────────╯

╭──────────────────────── Processing Complete ────────────────────────╮
│ Summary:                                                            │
│ Files Processed: 124                                                │
│ Total Tokens: 127,568                                               │
│ Output Destination: llms.txt                                        │
│                                                                     │
│ Top 3 Files by Tokens:                                              │
│   - docs/assets/css/main.css (47,983 tokens)                        │
│   - svgn/src/collections.rs (5,362 tokens)                          │
│   - svgn/src/plugins/remove_unknowns_and_defaults.rs (4,955 tokens) │
│                                                                     │
│ Top 5 Extensions by Tokens:                                         │
│   - .rs (51,325 tokens)                                             │
│   - .css (49,238 tokens)                                            │
│   - .sh (9,049 tokens)                                              │
│   - .html (7,592 tokens)                                            │
│   - .yml (3,068 tokens)                                             │
╰─────────────────────────────────────────────────────────────────────╯
Building the svgn project...
   Compiling svgn v1.2.3 (/Users/adam/Developer/vcs/github.twardoch/pub/svgn/svgn)
warning: unused imports: `MatchingContext`, `MatchingForInvalidation`, `MatchingMode`, `NeedsSelectorFlags`, and `QuirksMode`
  --> svgn/src/plugins/inline_styles.rs:25:5
   |
25 |     MatchingContext, MatchingForInvalidation, MatchingMode, NeedsSelectorFlags, QuirksMode,
   |     ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `SvgElementWrapper` and `walk_element_tree_with_parent`
  --> svgn/src/plugins/inline_styles.rs:35:5
   |
35 |     walk_element_tree_with_parent, SvgElementWrapper, SvgSelectorImpl,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

warning: unused import: `MatchingContext`
   --> svgn/src/plugins/inline_styles_selector.rs:502:9
    |
502 |         MatchingContext, MatchingForInvalidation, MatchingMode, NeedsSelectorFlags, QuirksMode,
    |         ^^^^^^^^^^^^^^^

error[E0599]: no method named `expand_entities_in_text` found for reference `&parser::Parser` in the current scope
   --> svgn/src/parser.rs:132:45
    |
132 |                         text_content = self.expand_entities_in_text(&text_content, &entities);
    |                                             ^^^^^^^^^^^^^^^^^^^^^^^
    |
help: there is a method `expand_entities` with a similar name, but with different arguments
   --> svgn/src/parser.rs:65:5
    |
65  |     pub fn expand_entities(mut self, expand: bool) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `parse_entities_from_doctype` found for reference `&parser::Parser` in the current scope
   --> svgn/src/parser.rs:194:30
    |
194 |                         self.parse_entities_from_doctype(&doctype, &mut entities);
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `&Parser`

warning: unused variable: `parent`
   --> svgn/src/plugins/inline_styles.rs:288:5
    |
288 |     parent: Option<&Element>,
    |     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_parent`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `index`
   --> svgn/src/plugins/inline_styles.rs:289:5
    |
289 |     index: usize,
    |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_index`

error[E0502]: cannot borrow `*element` as immutable because it is also borrowed as mutable
   --> svgn/src/plugins/inline_styles.rs:345:22
    |
338 |     for child in &mut element.children {
    |                  ---------------------
    |                  |
    |                  mutable borrow occurs here
    |                  mutable borrow later used here
...
345 |                 Some(element),
    |                      ^^^^^^^ immutable borrow occurs here

warning: unused variable: `media_rule`
   --> svgn/src/plugins/inline_styles.rs:540:28
    |
540 |             CssRule::Media(media_rule) => {
    |                            ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_media_rule`

warning: unused variable: `selector_str`
   --> svgn/src/plugins/inline_styles.rs:596:19
    |
596 | fn parse_selector(selector_str: &str) -> Option<SelectorList<SvgSelectorImpl>> {
    |                   ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_selector_str`

warning: unused variable: `wrapper`
   --> svgn/src/plugins/remove_attributes_by_selector.rs:145:13
    |
145 |         let wrapper = SvgElementWrapper::new(element);
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_wrapper`

warning: unused variable: `context`
   --> svgn/src/plugins/remove_attributes_by_selector.rs:147:17
    |
147 |         let mut context: selectors::matching::MatchingContext<'_, SvgSelectorImpl> = selectors::matching::MatchingContext::new(
    |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_context`

warning: variable does not need to be mutable
   --> svgn/src/plugins/remove_attributes_by_selector.rs:147:13
    |
147 |         let mut context: selectors::matching::MatchingContext<'_, SvgSelectorImpl> = selectors::matching::MatchingContext::new(
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> svgn/src/plugins/remove_attributes_by_selector.rs:157:13
    |
157 |         let mut matches = false;
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `parser`
   --> svgn/src/plugins/remove_attributes_by_selector.rs:256:21
    |
256 |             let mut parser = cssparser::Parser::new(&mut parser_input);
    |                     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_parser`

warning: unused variable: `parsing_mode`
   --> svgn/src/plugins/remove_attributes_by_selector.rs:257:17
    |
257 |             let parsing_mode = selectors::parser::ParseRelative::No;
    |                 ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_parsing_mode`

warning: unused variable: `parser`
   --> svgn/src/plugins/remove_attributes_by_selector.rs:262:21
    |
262 |             let mut parser = cssparser::Parser::new(&mut input);
    |                     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_parser`

warning: variable does not need to be mutable
   --> svgn/src/plugins/remove_attributes_by_selector.rs:256:17
    |
256 |             let mut parser = cssparser::Parser::new(&mut parser_input);
    |                 ----^^^^^^
    |                 |
    |                 help: remove this `mut`

warning: variable does not need to be mutable
   --> svgn/src/plugins/remove_attributes_by_selector.rs:262:17
    |
262 |             let mut parser = cssparser::Parser::new(&mut input);
    |                 ----^^^^^^
    |                 |
    |                 help: remove this `mut`

Some errors have detailed explanations: E0502, E0599.
For more information about an error, try `rustc --explain E0502`.
warning: `svgn` (lib) generated 16 warnings
error: could not compile `svgn` (lib) due to 3 previous errors; 16 warnings emitted
